# pred-fab

./: .envTEMPLATE  .gitignore  .importlinter  ACQUISITION_REFACTOR_PLAN.md  AGENTS.md  CALIBRATION_CONCEPT_REVIEW.md  CALIBRATION_STRATEGY.md  CHANGELOG.md  CITATION.cff  COMMIT_MESSAGE.txt  EXPLORATION_AUDIT.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CALIBRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  OPTION_A_DIFFERENTIABLE_ACQUISITION.md  PHASE_C_PLAN.md  PROJECT_CONTEXT.md  QUICK_START.md  README.md  UML_diagram.puml  configTEMPLATE.yaml  main.py  pyproject.toml  pytest.ini  test_minimal_calibration.py
UML diagrams/: UML base classes.puml  UML generic example.puml
UML_diagrams/: UML_base_classes.puml  UML_test_example.puml
concepts/: _config.py  _style.py  compare_kernelfield_sobol.py  compare_kernelfield_sobol_local.py  compare_stroud5_sobol_local.py  density_to_evidence_to_objective.py  diag_integrated.py  evidence_integration.py  evidence_to_objective.py  evidence_transform.py  exploration_acquisition.py  feature_density.py  importance_weights.py  inference_result.py  kernel_shapes.py  kernelfield_joint_visual.py  marginal_joint_integration.py  panels.py  performance_topology.py  schedule_comparison.py  sensitivity_matrix.py
docs/: CALIBRATION_STRATEGY.md  CODING_STANDARDS.md  CORE_DATA_STRUCTURES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SEPARATION_OF_CONCERNS.md  TUNING_STRATEGY.md
examples/: README.md  UML_test_example.puml  __init__.py  aixd_example.py  calibration.py  config.yaml  energy_consumption.py  evaluation_energy.py  evaluation_geometry.py  example_data_interface.py  example_evaluation_models.py  external_data.py  file_data_interface.py  interfaces.py  main.py  mock_data_interface.py  path_deviation.py  predict_all.py  prediction.py  run_example.py  utils.py  visualize.py  workflow.py
lbp_package/: data_interface.py  evaluation.py  orchestration.py
lbp_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
local/: schema_registry.json
scripts/: debug_baseline.py  debug_discovery.py
tests/: README.md  TESTS_CONTEXT.md  conftest.py  pytest.ini  run_tests.py  test_agent_integration.py  test_data.py  test_data_blocks.py  test_data_objects.py  test_datamodule.py  test_datamodule_integration.py  test_dataset.py  test_dimensional_prediction.py  test_evaluation_from_params.py  test_inference_bundle.py  test_interfaces.py  test_kwargs_passthrough.py  test_normalization.py  test_orchestration.py  test_prediction_api.py  test_schema.py  (+3 more)
(+246 files in other folders)
